removed dep on sbt-dev-settings plugin